crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__multiple_operations_types.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& types.code"
---
import type { Artifact as $Artifact, Nullable as $Nullable, List as $List, FragmentRefs as $FragmentRefs, SchemaMeta as $SchemaMeta } from "mearie/types";
export type $Scalars = {
	ID: string;
	String: string;
	Int: number;
	Float: number;
	Boolean: boolean;
};
export type $Schema = $SchemaMeta<{
	scalars: {};
	entities: {
		User: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "name" | "id";
		};
	};
	queryFields: "users" | "user";
}>;
export type RequiredAction = "THROW" | "CASCADE";
export type GetUser$data = {
	user?: $Nullable<{
		name: $Scalars["String"];
		id: $Scalars["ID"];
	}>;
};
export type GetUser$vars = {
	id: $Scalars["ID"];
};
export type GetUser = $Artifact<"query", "GetUser", GetUser$data, GetUser$vars>;
export type ListUsers$data = {
	users: $List<{
		name: $Scalars["String"];
		id: $Scalars["ID"];
	}>;
};
export type ListUsers$vars = {};
export type ListUsers = $Artifact<"query", "ListUsers", ListUsers$data, ListUsers$vars>;
export type DeleteUser$data = {
	deleteUser: $Scalars["Boolean"];
};
export type DeleteUser$vars = {
	id: $Scalars["ID"];
};
export type DeleteUser = $Artifact<"mutation", "DeleteUser", DeleteUser$data, DeleteUser$vars>;
