crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__nested_input_objects_runtime.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& runtime.code"
---
export const $CreateOrder = {
	name: "CreateOrder",
	body: "mutation CreateOrder($input: CreateOrderInput!) {\n  createOrder(input: $input) {\n    __typename\n    id\n    status\n  }\n}",
	kind: "mutation",
	selections: [{
		kind: "Field",
		name: "createOrder",
		type: "Order",
		args: { input: {
			kind: "variable",
			name: "input"
		} },
		selections: [
			{
				kind: "Field",
				name: "__typename"
			},
			{
				kind: "Field",
				name: "id",
				type: "ID"
			},
			{
				kind: "Field",
				name: "status",
				type: "String"
			}
		]
	}],
	variableDefs: [{
		name: "input",
		type: "CreateOrderInput"
	}]
};
export const artifactMap = { "\n            mutation CreateOrder($input: CreateOrderInput!) {\n                createOrder(input: $input) {\n                    id\n                    status\n                }\n            }\n        ": $CreateOrder };
export const artifactByName = { "mutation:CreateOrder": $CreateOrder };
export const schema = {
	entities: { "Order": { keyFields: ["id"] } },
	inputs: {
		"AddressInput": { fields: [{
			name: "street",
			type: "String"
		}, {
			name: "city",
			type: "String"
		}] },
		"ShippingInput": { fields: [{
			name: "address",
			type: "AddressInput"
		}] },
		"OrderItemInput": { fields: [{
			name: "productId",
			type: "ID"
		}, {
			name: "quantity",
			type: "Int"
		}] },
		"CreateOrderInput": { fields: [{
			name: "item",
			type: "OrderItemInput"
		}, {
			name: "shipping",
			type: "ShippingInput"
		}] }
	}
};
export const graphql = (artifact) => artifactMap[artifact];
graphql.query = (name) => artifactByName["query:" + name];
graphql.mutation = (name) => artifactByName["mutation:" + name];
graphql.subscription = (name) => artifactByName["subscription:" + name];
graphql.fragment = (name) => artifactByName["fragment:" + name];
graphql.enum = (value) => value;
